--- a/to-do-list.css
+++ b/to-do-list.css
@@ -1,14 +1,14 @@
 .my-list{
-    background: #f7f381;
-    padding: 8px 24px;
-    width: 500px;
-    font-size: 30px;
-    border: 1px solid #f7f381;
-    background:  #f7f381;
-    box-shadow: 0 0 10px 2px #333
+    background: #51e9c6;
+    padding: 8px 26px;
+    width: 1000px;
+    font-size: 40px;
+    border: 1px solid #51e9c6;
+    background:  #51e9c6;
+    box-shadow: 0 0 10px 2px #e2dfdf
 }
 ol{
-    margin: 12px;
+    margin: 14px;
 }
 p{
     text-align: center;
